--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "mongoose": "^6.9.2",
     "mysql2": "^3.1.2",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-kakao": "^1.0.1",
+    "passport-naver": "^1.0.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.12"
