--- a/.github/workflows/ECS-CICD.yaml
+++ b/.github/workflows/ECS-CICD.yaml
@@ -57,6 +57,7 @@ jobs:
 
         run: |
           aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 799886310010.dkr.ecr.ap-northeast-2.amazonaws.com
+          docker-compose build
           docker-compose push
 
       - name: Update ECS service
