--- a/.github/workflows/ECS-CICD.yaml
+++ b/.github/workflows/ECS-CICD.yaml
@@ -41,10 +41,10 @@ jobs:
 
       - name: Delete images
         run: |
-          IMAGES=$(aws ecr describe-images --repository-name ${{env.ECR_REPOSITORY}} --region ap-northeast-2 | gawk 'match($0, /imageDigest\": \"sha256:[a-f0-9]+\"/, ary) {print substr(ary[0], RSTART+14, RLENGTH-15)}')
+          IMAGES=$(aws ecr describe-images --repository-name hnn --region ap-northeast-2 | gawk 'match($0, /imageDigest\": \"sha256:[a-f0-9]+\"/, ary) {print substr(ary[0], RSTART+14, RLENGTH-15)}')
           for image in $IMAGES; do
             echo "Deleting $image"
-            aws ecr batch-delete-image --repository-name ${{env.ECR_REPOSITORY}} --image-ids imageDigest=$image --region ap-northeast-2
+            aws ecr batch-delete-image --repository-name hnn --image-ids imageDigest=$image --region ap-northeast-2
           done
 
       - name: Build, tag, and push the image(node.js) to Amazon ECR
