--- a/.github/workflows/ECS-CICD.yaml
+++ b/.github/workflows/ECS-CICD.yaml
@@ -9,7 +9,8 @@ env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   AWS_REGION: ap-northeast-2
-  ECR_REPOSITORY: 799886310010.dkr.ecr.ap-northeast-2.amazonaws.com
+  ECR_REGISTRY: 799886310010.dkr.ecr.ap-northeast-2.amazonaws.com
+  ECR_REPOSITORY: hnn
   ECS_CLUSTER: ${{secrets.ECS_CLUSTER}}
   ECS_SERVICE: ${{secrets.ECS_SERVICE}}
   DEV_ENV: ${{secrets.DEV_ENV}}
@@ -41,17 +42,16 @@ jobs:
 
       - name: Delete images
         run: |
-          IMAGES=$(aws ecr describe-images --repository-name hnn --region ap-northeast-2 | gawk 'match($0, /imageDigest\": \"sha256:[a-f0-9]+\"/, ary) {print substr(ary[0], RSTART+14, RLENGTH-15)}')
+          IMAGES=$(aws ecr describe-images --repository-name ${{env.ECR_REGISTRY}}/${{env.ECR_REPOSITORY}} --region ap-northeast-2 | gawk 'match($0, /imageDigest\": \"sha256:[a-f0-9]+\"/, ary) {print substr(ary[0], RSTART+14, RLENGTH-15)}')
           for image in $IMAGES; do
             echo "Deleting $image"
-            aws ecr batch-delete-image --repository-name hnn --image-ids imageDigest=$image --region ap-northeast-2
+            aws ecr batch-delete-image --repository-name ${{env.ECR_REGISTRY}}/${{env.ECR_REPOSITORY}} --image-ids imageDigest=$image --region ap-northeast-2
           done
 
       - name: Build, tag, and push the image(node.js) to Amazon ECR
         id: build-image-node
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{env.ECR_REPOSITORY}}
           IMAGE_TAG: ${{ github.sha }}
           IMAGE_TAG_NODE: hnn-nest
 
