--- a/.github/workflows/ECS-CICD.yaml
+++ b/.github/workflows/ECS-CICD.yaml
@@ -58,6 +58,10 @@ jobs:
           docker build -f dockerfile.dev -t ${{env.ECR_REGISTRY}}/hnn:dev .
           docker push ${{env.ECR_REGISTRY}}/hnn:dev
 
+      - name: Get Github Actions IP
+        id: ip
+        uses: haythem/public-ip@v1.2
+
       - name: Add Github Actions IP to Security group
         run: |
           aws ec2 authorize-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
