--- a/.github/workflows/EC2-DOCKER-CICD.yaml
+++ b/.github/workflows/EC2-DOCKER-CICD.yaml
@@ -55,7 +55,7 @@ jobs:
 
         run: |
           aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{env.ECR_REGISTRY}}
-          docker build -f dockerfile.dev -t ${{env.ECR_REGISTRY}}/hnn:dev .
+          docker build -f dockerfile.dev --env-file .dev.env -t ${{env.ECR_REGISTRY}}/hnn:dev .
           docker push ${{env.ECR_REGISTRY}}/hnn:dev
 
       - name: Get Github Actions IP
