--- a/.github/workflows/EC2-DOCKER-CICD.yaml
+++ b/.github/workflows/EC2-DOCKER-CICD.yaml
@@ -35,6 +35,8 @@ jobs:
 
       - name: create env
         run: |
+          touch .dev.env
+
           echo $DEV_ENV >> .dev.env
           echo $PROD_ENV >> .prod.env
 
