--- a/.github/workflows/EC2-DOCKER-CICD.yaml
+++ b/.github/workflows/EC2-DOCKER-CICD.yaml
@@ -35,7 +35,7 @@ jobs:
         run: |
           touch .dev.env
 
-          echo ${{${{secrets.DEV_ENV}}>> .dev.env
+          echo ${{secrets.DEV_ENV}}>> .dev.env
 
       - name: Delete images
         run: |
