--- a/dockerfile.dev
+++ b/dockerfile.dev
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 node:alpine AS development
+FROM --platform=linux/amd64 node:latest AS development
 
 WORKDIR /app
 
@@ -6,7 +6,7 @@ COPY package*.json ./
 
 RUN npm install
 
-
+COPY .dev.env ./
 
 COPY . .
 
