--- a/.github/workflows/EC2-DOCKER-CICD.yaml
+++ b/.github/workflows/EC2-DOCKER-CICD.yaml
@@ -34,8 +34,6 @@ jobs:
       - name: create env
         run: |
 
-          echo ${{secrets.DEV_ENV}}>> .dev.env
-
       - name: Build, tag, and push the image(node.js) to Amazon ECR
         id: build-image-node
         env:
@@ -44,6 +42,7 @@ jobs:
           IMAGE_TAG_NODE: hnn-nest
 
         run: |
+          echo ${{secrets.DEV_ENV}} >> .env
           aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{env.ECR_REGISTRY}}
           docker-compose build -f docker-compose.dev.yml
           docker-compose push -f docker-compose.dev.yml
