--- a/dockerfile.dev
+++ b/dockerfile.dev
@@ -2,6 +2,8 @@ FROM --platform=linux/amd64 node:alpine AS development
 
 WORKDIR /app
 
+COPY .dev.env /
+
 COPY package*.json ./
 
 RUN npm install
