--- a/dockerfile.dev
+++ b/dockerfile.dev
@@ -2,7 +2,7 @@ FROM --platform=linux/amd64 node:alpine AS development
 
 WORKDIR /app
 
-COPY .dev.env /
+COPY .dev.env .
 
 COPY package*.json ./
 
