Fix: docker file 구조 변경

--- a/dockerfile.dev
+++ b/dockerfile.dev
@@ -6,6 +6,12 @@ COPY package*.json ./
 
 RUN npm install
 
-COPY . .
+RUN mkdir src
+
+COPY src src
+
+COPY .dev.env .
+
+COPY tsconfig.json .
 
 CMD [ "npm", "run", "start:dev" ]
