--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.282.0",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -28,11 +29,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.3.9",
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.3.9",
+    "aws-sdk": "^2.1328.0",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
@@ -42,6 +44,8 @@
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
     "mongoose": "^6.9.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.1.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
