--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cookie-parser": "^1.4.6",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
+    "heapdump": "^0.3.15",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
