--- a/.github/workflows/EC2-DOCKER-CICD.yaml
+++ b/.github/workflows/EC2-DOCKER-CICD.yaml
@@ -77,12 +77,12 @@ jobs:
           script: |
             ${{secrets.AWS_DOCKER_LOGIN_CONSOLE}}
 
-            sudo docker rm -f $(sudo docker ps -q -f "expose=3100")
             sudo docker rmi $(sudo docker images -q) 
+            sudo docker rm -f $(sudo docker ps -q -f "expose=3100")
             sudo docker pull ${{env.ECR_REGISTRY}}/hnn:dev
 
 
-            sudo docker run -d  -p 3100:3100 ${{env.ECR_REGISTRY}}/hnn:dev
+            sudo docker run -d --restart unless-stopped  -p 3100:3100 ${{env.ECR_REGISTRY}}/hnn:dev
 
       - name: Remove Github Actions IP From Security Group
         run: |
