--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.282.0",
+    "@google-cloud/local-auth": "^2.1.1",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -43,6 +44,7 @@
     "cookie-parser": "^1.4.6",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
+    "googleapis": "^112.0.0",
     "heapdump": "^0.3.15",
     "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
@@ -55,7 +57,8 @@
     "passport-naver": "^1.0.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "url-lib": "^3.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
