Fix: ec2 docker cicd add npm install

--- a/.github/workflows/EC2-DOCKER-CICD.yaml
+++ b/.github/workflows/EC2-DOCKER-CICD.yaml
@@ -52,6 +52,7 @@ jobs:
           IMAGE_TAG_NODE: hnn-nest
 
         run: |
+          npm install
           npm run build
           ${{secrets.AWS_DOCKER_LOGIN_CONSOLE}}
           docker-compose  -f docker-compose.dev.yml build
