--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,10 @@
-version: '3'
+version: "3"
 
 services:
   app:
     build:
       context: ./
       dockerfile: dockerfile.dev
-    image: 799886310010.dkr.ecr.ap-northeast-2.amazonaws.com/hnn:dev
+    image: 799886310010.dkr.ecr.ap-northeast-2.amazonaws.com/hnn:dist
     ports:
-      - '3100:3100'
-
-    command: npm run start:dev
+      - "3100:3100"
