Fix: swagger 문서 설정

--- a/.github/workflows/EC2-DOCKER-CICD.yaml
+++ b/.github/workflows/EC2-DOCKER-CICD.yaml
@@ -79,7 +79,7 @@ jobs:
             ${{secrets.AWS_DOCKER_LOGIN_CONSOLE}}
 
             sudo docker rm -f $(sudo docker ps -q -f "expose=3100")
-            sudo docker rmi $(sudo docker images -f "reference=${{env.ECR_REGISTRY}}/hnn:dev") 
+            sudo docker rmi -f $(sudo docker images -f "reference=${{env.ECR_REGISTRY}}/hnn:dev") 
             sudo docker pull ${{env.ECR_REGISTRY}}/hnn:dev
 
 
