--- a/package.json
+++ b/package.json
@@ -99,6 +99,11 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "moduleNameMapper": {
+      "^@root/(.*)$": "<rootDir>/$1",
+      "^@database/(.*)$": "<rootDir>/database/$1",
+      "^@common/(.*)$": "<rootDir>/common/$1"
+    },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
