--- a/.github/workflows/EC2-DOCKER-CICD.yaml
+++ b/.github/workflows/EC2-DOCKER-CICD.yaml
@@ -92,7 +92,7 @@ jobs:
             sudo docker pull ${{env.ECR_REGISTRY}}/hnn:dev
 
 
-            sudo docker run -d --restart unless-stopped -p 3100:3100 ${{se.ECR_REGISTRY}}/hnn:dev
+            sudo docker run -d --restart unless-stopped -p 3100:3100 ${{ secrets.ECR_REGISTRY }}/hnn:dev
 
       - name: Remove Github Actions IP From Security Group
         run: |
