--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
+    "discord": "^0.8.2",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.3",
     "googleapis": "^112.0.0",
@@ -50,6 +51,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.1.2",
+    "openai": "^3.2.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
